k8s/web-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-client
  template:
    metadata:
      labels:
        app: web-client
    spec:
      containers:
      - name: web-client
        image: dilinajayalath/web-client:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "384Mi"
          requests:
            cpu: "150m"
            memory: "192Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
