k8s/admin-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
spec:
  selector:
    app: admin-panel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
