k8s/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
