k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30085
  type: NodePort
