k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30082
