k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30084
  type: NodePort
