k8s/restaurant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 3000  
      targetPort: 3000
  type: NodePort
