k8s/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
spec:
  type: NodePort
  selector:
    app: web-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000  # Access via http://localhost:30000
